manifests/cluster-addons/media/jellyfin/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-lan
  namespace: media
  labels:
    l2-announce: 'true'
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  ports:
    - name: http
      port: 8096
      protocol: TCP
      targetPort: http
