manifests/cluster-addons/media/jellyfin/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellyfin
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-home
        - matchLabels:
            app.kubernetes.io/name: seerr
        - matchLabels:
            app.kubernetes.io/name: radarr
        - matchLabels:
            app.kubernetes.io/name: sonarr
        - matchLabels:
            app.kubernetes.io/name: lidarr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus-blackbox-exporter
      toPorts:
        - ports:
            - port: '8096'
              protocol: TCP

    - fromCIDR:
        - 192.168.50.0/24 # wifi vlan
        - 192.168.80.0/24 # media vlan
      toPorts:
        - ports:
            - port: '8096'
              protocol: TCP

  egress:
    - toFQDNs:
        - matchPattern: '*.jellyfin.org'
        - matchPattern: '*.mirror.jellyfin.org'
        #
        - matchPattern: '*.theaudiodb.com'
        - matchName: 'musicbrainz.org'
        #
        - matchName: 'api.themoviedb.org'
        - matchName: 'www.omdbapi.com'
        - matchName: 'image.tmdb.org'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'
